--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -397,6 +397,18 @@
             </li>
             <li class="line dk"></li>
             <li class="hidden-folded padder m-t m-b-sm text-muted text-xs" style="font-size:15px">
+              <span><b>曲谱</b></span>
+            </li>
+            <li>
+              <a routerLink="/home/home/score" [ngClass]="{auto:true}">
+                 <b class="badge bg-info pull-right">9</b>
+                 <i><img style="width:25px" src="./public/img/FindScore.png"></i>
+                  <!-- <i class="glyphicon  glyphicon-search icon text-info-lter" style="font-size: 25px"></i>  -->
+                  <span class="font-bold">曲谱</span>
+                </a>
+            </li>
+            <li class="line dk"></li>
+            <li class="hidden-folded padder m-t m-b-sm text-muted text-xs" style="font-size:15px">
               <span><b>发现乐器</b></span>
             </li>
             <li>
