--- a/src/app/home/home/find/find.component.html
+++ b/src/app/home/home/find/find.component.html
@@ -56,7 +56,7 @@
                   <dt class="col-lg-1 col-md-2 col-sm-2">
                     <div>
                       <a herf="#" routerLink="/home/home/brand/{{brand['_id']}}">
-                      <img width="50" height="50" src="http://localhost:3000{{brand['icon']}}"></a>
+                      <img width="50" height="50" src="{{brand['icon']}}"></a>
                       <div><a herf="#" routerLink="/home/home/brand/{{brand['_id']}}">{{brand['name']}}</a></div>
                     </div>
                   </dt>
@@ -65,7 +65,7 @@
                     <ul class="rank-list-ul" >
                       <li  class="col-lg-2 col-md-2 col-sm-2" *ngFor="let pros of brand['products'][i];">
                         <h4><a routerLink="/home/home/product/{{pros['_id']}}">{{pros["name"]}}</a></h4>
-                         <a routerLink="/home/home/product/{{pros['_id']}}"><img style="width:100%" alt="" src="http://localhost:3000{{pros['appearimages'][0]}}"></a>
+                         <a routerLink="/home/home/product/{{pros['_id']}}"><img style="width:100%" alt="" src="{{pros['appearimages'][0]}}"></a>
                         <div>指导价：<a class="red" routerLink="/home/home/product/{{pros['_id']}}">{{pros["recommentPrice"]}}</a></div>
                         <div><a routerLink="/home/home/product/{{pros['_id']}}">图库</a>  <a routerLink="/home/home/product/{{pros['_id']}}">论坛</a> <a routerLink="/home/home/product/{{pros['_id']}}">口碑</a></div>
                       </li>
