--- a/src/app/home/home/live/class/class.component.html
+++ b/src/app/home/home/live/class/class.component.html
@@ -13,120 +13,151 @@
             <div class="panel-body">col-lg-12</div>
           </div>
         </div>
-        <div class="col-lg-8">
+        <div class="col-lg-6">
           <div class="panel panel-default">
             <div class="panel-heading font-bold">
-              我加入的课程
-            </div>
-            <div class="panel-body">
-              <ul class="all-blogs">
-                <li class="media" *ngFor="let class of classmyjoin">
-                  <div class="shape">
-                    <div class="shape-text">hot</div>
-                  </div>
-                  <a class="pull-left" routerLink="/home/home/live/classauth/{{class._id}}">
-                    <img style="width:200px;height:150px" src="{{class.images[0]}}" alt="...">
-                  </a>
-                  <div class="media-body">
-                    <a routerLink="/home/home/live/classauth/{{class._id}}"><h4 class="media-heading">{{class.title}}</h4></a>
-                    <p class="author">{{class.subtitle}}</p>
-                    <p class="author" style="margin-right:20px">主讲：{{class.lecturename}}</p>
-                    <p class="author" style="margin-right:20px">开课时间：{{class.start}} -- {{class.end}}</p>
-                    <p class="author" style="margin-right:20px;color:red">RMB:{{class.price}}</p>
-                  </div>
-                  <div class="status">
-                      <button class="btn m-b-xs w-xs btn-danger btn-rounded disabled">{{class.status}}</button>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-8">
-          <div class="panel panel-default">
-            <div class="panel-heading font-bold">
-              精品课程
-              <div class="col-lg-2" style="float:right">
-                <button class="btn btn-success btn-block btn-sm " (click)="issue()">+发布课程</button>
+              演奏鉴赏
+              <div class="col-lg-3" style="float:right">
+                <button routerLink="/home/home/live/issueshow" class="btn btn-success btn-block btn-sm ">+开通直播</button>
               </div>
             </div>
             <div class="panel-body">
-              <div class="vbox">
-                <div class="nav-tabs-alt">
-                  <ul class="nav nav-tabs nav-justified">
-                    <li class="active">
-                      <a data-target="#tab-1" role="tab" data-toggle="tab" class="h4">预计开班课程</a>
-                    </li>
-                    <li>
-                      <a data-target="#tab-2" role="tab" data-toggle="tab" class="h4">完成的课程</a>
-                    </li>
-                  </ul>
+              <div class="col-lg-4 col-md-6 col-xs-6" *ngFor="let show of showlist">
+                <a (click)="openlive(show)" class="d-block mb-4 h-100">
+                   <img class="img-fluid img-thumbnail" src="{{show.image}}" alt="">
+                 </a>
+                 <div class="top">
+                  {{show.types}}
                 </div>
-
-                <div class="tab-content">
-                  <div class="tab-pane active" id="tab-1">
-                    <div class="wrapper-md">
-                      <ul class="all-blogs">
-                        <li class="media" *ngFor="let class of classlisting">
-                          <div class="shape">
-                            <div class="shape-text">hot</div>
-                          </div>
-                          <a class="pull-left" routerLink="/home/home/live/classauth/{{class._id}}">
-                            <img style="width:200px;height:150px"  src="{{class.images[0]}}" alt="...">
-                          </a>
-                          <div class="media-body">
-                            <a routerLink="/home/home/live/classauth/{{class._id}}"><h4 class="media-heading">{{class.title}}</h4></a>
-                            <p class="author">{{class.subtitle}}</p>
-                            <p class="author" style="margin-right:20px">主讲：{{class.lecturename}}</p>
-                            <p class="author" style="margin-right:20px">开课时间：{{class.start}} -- {{class.end}}</p>
-                            <p class="author" style="margin-right:20px;color:red">RMB:{{class.price}}</p>
-                          </div>
-                          <div class="status">
-                              <button class="btn m-b-xs w-xs btn-danger btn-rounded disabled">{{class.status}}</button>
-                          </div>
-                        </li>
-
-                      </ul>
-                    </div>
+                 <div class="status">
+                  <button class="btn m-b-xs w-xs  btn-rounded disabled" [ngClass]="{'btn-danger': show.status=='直播中'}">{{show.status}}</button>
+                </div>
+                 {{show.avator}}
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                  <div class="panel-heading font-bold">
+                    我加入的课程
                   </div>
-                  <div class="tab-pane" id="tab-2">
-                    <div class="wrapper-md">
-                      <ul class="all-blogs">
-                        <li class="media" *ngFor="let class of classlistover">
-                          <div class="shape">
-                            <div class="shape-text">hot</div>
-                          </div>
-                          <a class="pull-left" routerLink="/home/home/live/classauth/{{class._id}}">
-                            <img style="width:200px;height:150px"  src="{{class.images[0]}}" alt="...">
+                  <div class="panel-body">
+                    <ul class="all-blogs">
+                      <li class="media" *ngFor="let class of classmyjoin">
+                        <div class="shape">
+                          <div class="shape-text">hot</div>
+                        </div>
+                        <a class="pull-left" routerLink="/home/home/live/classauth/{{class._id}}">
+                          <img style="width:200px;height:150px" src="{{class.images[0]}}" alt="...">
+                        </a>
+                        <div class="media-body">
+                          <a routerLink="/home/home/live/classauth/{{class._id}}">
+                            <h4 class="media-heading">{{class.title}}</h4>
                           </a>
-                          <div class="media-body">
-                            <a routerLink="/home/home/live/classauth/{{class._id}}"><h4 class="media-heading">{{class.title}}</h4></a>
-                            <p class="author">{{class.subtitle}}</p>
-                            <p class="author" style="margin-right:20px">主讲：{{class.lecturename}}</p>
-                            <p class="author" style="margin-right:20px">开课时间：{{class.start}} -- {{class.end}}</p>
-                            <p class="author" style="margin-right:20px;color:red">RMB:{{class.price}}</p>
-                          </div>
-                          <div class="status">
-                              <button class="btn m-b-xs w-xs btn-default btn-rounded disabled">{{class.status}}</button>
-                          </div>
-                        </li>
-
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="tab-pane" id="tab-3">
-                    <div class="wrapper-md">
-
-                    </div>
+                          <p class="author">{{class.subtitle}}</p>
+                          <p class="author" style="margin-right:20px">主讲：{{class.lecturename}}</p>
+                          <p class="author" style="margin-right:20px">开课时间：{{class.start}} -- {{class.end}}</p>
+                          <p class="author" style="margin-right:20px;color:red">RMB:{{class.price}}</p>
+                        </div>
+                        <div class="status">
+                          <button class="btn m-b-xs w-xs btn-danger btn-rounded disabled">{{class.status}}</button>
+                        </div>
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
-
-
-            </div>
-            <div class="panel-footer">col-lg-12</div>
-          </div>
+              <div class="col-lg-12">
+                <div class="panel panel-default">
+                  <div class="panel-heading font-bold">
+                    精品课程
+                    <div class="col-lg-3" style="float:right">
+                      <button class="btn btn-success btn-block btn-sm " (click)="issue()">+发布课程</button>
+                    </div>
+                  </div>
+                  <div class="panel-body">
+                    <div class="vbox">
+                      <div class="nav-tabs-alt">
+                        <ul class="nav nav-tabs nav-justified">
+                          <li class="active">
+                            <a data-target="#tab-1" role="tab" data-toggle="tab" class="h4">预计开班课程</a>
+                          </li>
+                          <li>
+                            <a data-target="#tab-2" role="tab" data-toggle="tab" class="h4">完成的课程</a>
+                          </li>
+                        </ul>
+                      </div>
+      
+                      <div class="tab-content">
+                        <div class="tab-pane active" id="tab-1">
+                          <div class="wrapper-md">
+                            <ul class="all-blogs">
+                              <li class="media" *ngFor="let class of classlisting">
+                                <div class="shape">
+                                  <div class="shape-text">hot</div>
+                                </div>
+                                <a class="pull-left" routerLink="/home/home/live/classauth/{{class._id}}">
+                                  <img style="width:200px;height:150px"  src="{{class.images[0]}}" alt="...">
+                                </a>
+                                <div class="media-body">
+                                  <a routerLink="/home/home/live/classauth/{{class._id}}">
+                                    <h4 class="media-heading">{{class.title}}</h4>
+                                  </a>
+                                  <p class="author">{{class.subtitle}}</p>
+                                  <p class="author" style="margin-right:20px">主讲：{{class.lecturename}}</p>
+                                  <p class="author" style="margin-right:20px">开课时间：{{class.start}} -- {{class.end}}</p>
+                                  <p class="author" style="margin-right:20px;color:red">RMB:{{class.price}}</p>
+                                </div>
+                                <div class="status">
+                                  <button class="btn m-b-xs w-xs btn-danger btn-rounded disabled">{{class.status}}</button>
+                                </div>
+                              </li>
+      
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="tab-pane" id="tab-2">
+                          <div class="wrapper-md">
+                            <ul class="all-blogs">
+                              <li class="media" *ngFor="let class of classlistover">
+                                <div class="shape">
+                                  <div class="shape-text">hot</div>
+                                </div>
+                                <a class="pull-left" routerLink="/home/home/live/classauth/{{class._id}}">
+                                  <img style="width:200px;height:150px"  src="{{class.images[0]}}" alt="...">
+                                </a>
+                                <div class="media-body">
+                                  <a routerLink="/home/home/live/classauth/{{class._id}}">
+                                    <h4 class="media-heading">{{class.title}}</h4>
+                                  </a>
+                                  <p class="author">{{class.subtitle}}</p>
+                                  <p class="author" style="margin-right:20px">主讲：{{class.lecturename}}</p>
+                                  <p class="author" style="margin-right:20px">开课时间：{{class.start}} -- {{class.end}}</p>
+                                  <p class="author" style="margin-right:20px;color:red">RMB:{{class.price}}</p>
+                                </div>
+                                <div class="status">
+                                  <button class="btn m-b-xs w-xs btn-default btn-rounded disabled">{{class.status}}</button>
+                                </div>
+                              </li>
+      
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="tab-pane" id="tab-3">
+                          <div class="wrapper-md">
+      
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel-footer">col-lg-12</div>
+                </div>
+              </div>
         </div>
+        
         <div class="col-lg-4">
 
         </div>
