--- a/src/app/home/home/live/live-stream/live-stream.component.html
+++ b/src/app/home/home/live/live-stream/live-stream.component.html
@@ -42,9 +42,9 @@
                   <div class="panel panel-default">
                     <div class="panel-heading">在线沟通</div>
 
-                    <div [ngSwitch]="mes.to" class="panel-body wrapper-md" *ngFor="let mes of messagelist">
+                    <div class="panel-body"  [ngSwitch]="mes.to"  *ngFor="let mes of messagelist">
                       <div *ngSwitchCase="undefined">
-                        <div class="m-b">
+                        <div class="m-x">
                           <a (click)="anwser(mes.from,mes.avator)" class="pull-left thumb-sm avatar"><img src="{{mes.avatorPath}}" alt="..."></a>
                           <div class="m-l-xxl">
                             <div class="pos-rlt wrapper b b-light r r-2x">
@@ -56,7 +56,7 @@
                         </div>
                       </div>
                       <div *ngSwitchDefault>
-                        <div class="m-b">
+                        <div class="m-x">
                           <a  class="pull-right thumb-sm avatar"><img src="{{mes.avatorPath}}" class="img-circle" alt="..."></a>
                           <div class="m-r-xxl">
                             <div class="pos-rlt wrapper bg-primary r r-2x">
