--- a/src/app/home/home/product/product.component.html
+++ b/src/app/home/home/product/product.component.html
@@ -77,7 +77,7 @@
               <div class="ibox float-e-margins">
                 <div class="ibox-content">
                   <div class="lightBoxGallery">
-                    <a href="http://localhost:3000{{imgurl}}" title="1" data-gallery="" *ngFor="let imgurl of productInfo['appearimages'];let i = index"><img style="width:20%"  src="http://localhost:3000{{imgurl}}"></a>
+                    <a href="{{imgurl}}" title="1" data-gallery="" *ngFor="let imgurl of productInfo['appearimages'];let i = index"><img style="width:20%"  src="{{imgurl}}"></a>
                     <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
                     <div id="blueimp-gallery" class="blueimp-gallery">
                       <div class="slides"></div>
@@ -99,7 +99,7 @@
               <div class="ibox float-e-margins">
                 <div class="ibox-content">
                   <div class="lightBoxGallery">
-                    <a href="http://localhost:3000{{imgurl}}" title="1" data-gallery="" *ngFor="let imgurl of productInfo['detailimages'];let i = index"><img style="width:20%" src="http://localhost:3000{{imgurl}}"></a>
+                    <a href="{{imgurl}}" title="1" data-gallery="" *ngFor="let imgurl of productInfo['detailimages'];let i = index"><img style="width:20%" src="{{imgurl}}"></a>
                     <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
                     <div id="blueimp-gallery" class="blueimp-gallery">
                       <div class="slides"></div>
