--- a/src/app/home/home/score/scoreplay/scoreplay.component.css
+++ b/src/app/home/home/score/scoreplay/scoreplay.component.css
@@ -64,6 +64,8 @@
   .riffbox a{color:#AA2716}
   #score{position:relative;background-repeat:no-repeat;overflow:hidden;background-size: 650px 841px;width:650px;height:841px;}
 
-  .layer1{background-color: rgba( 152, 216, 148, 0.2);visibility:hidden;position:absolute;top:0px;left:0px;width:0px;height:0px;border:1px solid #c0c0c0;border-radius:3px}
+  .layer1{background-color: rgba( 152, 216, 148, 0.2);visibility:hidden;position:absolute;top:0px;left:0px;width:0px;height:0px;border:1px solid #c0c0c0;border-radius:3px};
   #score:hover{cursor:pointer}
-  
+
+  .figure_loading{height:80px;line-height:80px;text-align:center;color:#c8c8c8}
+  .channel{margin-top:30px;color:#3b3b3b}.channel:first-child{margin-top:24px}.channel_title{height:18px;line-height:18px;font-size:18px;font-weight:600}.channel_title:before{content:"";display:inline-block;float:left;width:4px;height:18px;margin-right:10px;background-color:#FB4747}.channel_list ul{list-style:none;margin:0;padding:0}.channel_list li{display:block;padding:15px 0;line-height:1.4em;max-width:290px;word-wrap:break-word}.channel_list ul{display:none}.channel_list ul.channel_list_show{display:block;color:#ababab}.channel_list .channel_subtitle{color:#ababab;height:25px;line-height:25px}.channel_list li>a{color:#000;text-decoration:none;font-size:18px;line-height:1.4em;font-weight:500}.channel_subtitle>*,.channel_subtitle>a{margin-right:10px;font-size:14px;color:#ababab}.channel_subtitle>a>span{display:inline-block;margin-left:10px}
