--- a/src/public/editor/css/froala_style.css
+++ b/src/public/editor/css/froala_style.css
@@ -107,13 +107,50 @@
   border-color: #43a047;
   color: #43a047;
 }
-.fr-view span.fr-emoticon {
+
+.clearfix::after {
+  clear: both;
+  display: block;
+  content: "";
+  height: 0;
+}
+.hide-by-clipping {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+.fr-popup .fr-emoticon {
+  display: inline-block;
+  font-size: 20px;
+  width: 20px;
+  padding: 5px;
+  line-height: 1;
+  cursor: default;
+  font-weight: normal;
+  font-family: "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+}
+.fr-popup .fr-emoticon img {
+  height: 20px;
+}
+.fr-popup .fr-link:focus {
+  outline: 0;
+  background: #ebebeb;
+}
+.fr-view span {
   font-weight: normal;
   font-family: "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
   display: inline;
   line-height: 0;
 }
-.fr-view span.fr-emoticon.fr-emoticon-img {
+.fr-view span {
   background-repeat: no-repeat !important;
   font-size: inherit;
   height: 1em;
